variables.Variables.scala.error
Compilation error:
Variables:6: error: not found: value pickupbaggle
pickupbaggle() 
^